[gd_scene load_steps=8 format=3 uid="uid://dij4vmto60p6x"]

[ext_resource type="Script" uid="uid://6k7n75f3ih4f" path="res://scripts/main_menu.gd" id="1_0ebjn"]
[ext_resource type="FontFile" uid="uid://i1ke5j7pd1p3" path="res://GrapeSoda.ttf" id="2_ob46e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.32156864, 0.32156864, 0.32156864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.49354547, 0.49354553, 0.49354553, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ebjn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.25
offset_top = -115.0
offset_right = 56.75
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Settings"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Characters"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "About"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_06t4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
text = "Exit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -238.0
offset_top = 79.0
offset_right = 238.0
offset_bottom = 139.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 59
text = "Road Jam Prototype"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Characters_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_about_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_exit_pressed"]
